--- a/frontend/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><b>ADOX APP</b></a>
+
+<div *ngIf="isLoggedIn | async as isLoggedIn">
+  <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" [routerLink]="['home']"><b>ADOX APP</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,21 +17,24 @@
                 <a class="nav-link" [routerLink]="['home']">Home</a>
             </li>
 
-            <li class="nav-item" routerLinkActive="active">
+
+            <li *ngIf="currentUser=='admin'" class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['tracking']">Seguimiento</a>
             </li>
 
+
             <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" [routerLink]="['reports']">Reportes</a>
-          </li>
+            </li>
+
 
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['about']">About</a>
             </li>
 
             
-
-        <li class="nav-item dropdown">
+        
+        <li *ngIf="currentUser=='admin'" class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Admin
           </a>
@@ -41,7 +46,9 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+      
       </ul>
+      
 
       
       <form class="form-inline my-2 my-lg-0">
@@ -62,6 +69,6 @@
       
   
   </nav>
-
+</div>
 
 
